# MysteryOfLimbo_Core

./: CMakeLists.txt  LICENSE  Makefile  README.md  limbo_core  shadowroot.keystore
.github/workflows/: android.yml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/shadowroot/mysteryoflimbo/: MysteryOfLimboActivity.java
assets/maps/: test_level.txt
include/: Common.h
include/gfx/: ShadowAudio.h  ShadowGFX.h
include/input/: InputManager.h
include/physics/: Collision.h
include/player/: Player.h
include/ui/: UIManager.h
include/world/: Camera.h  Enemy.h  Platform.h
src/: Physics.cpp  main.cpp
src/elements/: EarthSkill.cpp
src/gfx/: ShadowAudio.cpp  ShadowGFX.cpp
src/input/: InputManager.cpp
src/physics/: Collision.cpp  Physics.cpp
src/player/: Player.cpp
src/ui/: UIManager.cpp
src/world/: Camera.cpp  LevelLoader.cpp  WorldProcessor.cpp
